--- a/user-console/autotune/app-artifacts.yaml
+++ b/user-console/autotune/app-artifacts.yaml
@@ -1,6 +1,6 @@
 versions:
 - version: 0.1.2
   images:
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/autotune-app:240822
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/pep-proxy:1.0.14
+  - docker.io/t9kpublic/autotune-app:240822
+  - docker.io/t9kpublic/pep-proxy:1.0.14
   chart: oci://docker.io/t9kpublic/autotune:0.1.2
