--- a/user-console/dify/app-artifacts.yaml
+++ b/user-console/dify/app-artifacts.yaml
@@ -1,21 +1,21 @@
 versions:
 - version: 0.7.1
   images:
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/dify-web:1.4.3
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/dify-api:1.4.3
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/dify-sandbox:0.2.12
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/dify-plugin-daemon:0.1.2-local
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/redis:7.4.1
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/postgresql:16.3.0-debian-12-r4
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/minio:2024.4.18-debian-12-r0
+  - docker.io/t9kpublic/dify-web:1.4.3
+  - docker.io/t9kpublic/dify-api:1.4.3
+  - docker.io/t9kpublic/dify-sandbox:0.2.12
+  - docker.io/t9kpublic/dify-plugin-daemon:0.1.2-local
+  - docker.io/t9kpublic/redis:7.4.1
+  - docker.io/t9kpublic/postgresql:16.3.0-debian-12-r4
+  - docker.io/t9kpublic/minio:2024.4.18-debian-12-r0
   chart: oci://docker.io/t9kpublic/dify:0.7.1
 - version: 0.7.0
   images:
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/dify-web:1.3.1.post1
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/dify-api:1.3.1.post1
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/dify-sandbox:0.2.12
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/dify-plugin-daemon:0.0.9-local
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/redis:7.4.1
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/postgresql:16.3.0-debian-12-r4
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/minio:2024.4.18-debian-12-r0
+  - docker.io/t9kpublic/dify-web:1.3.1.post1
+  - docker.io/t9kpublic/dify-api:1.3.1.post1
+  - docker.io/t9kpublic/dify-sandbox:0.2.12
+  - docker.io/t9kpublic/dify-plugin-daemon:0.0.9-local
+  - docker.io/t9kpublic/redis:7.4.1
+  - docker.io/t9kpublic/postgresql:16.3.0-debian-12-r4
+  - docker.io/t9kpublic/minio:2024.4.18-debian-12-r0
   chart: oci://docker.io/t9kpublic/dify:0.7.0
