--- a/user-console/fish-speech/app-artifacts.yaml
+++ b/user-console/fish-speech/app-artifacts.yaml
@@ -1,5 +1,5 @@
 versions:
 - version: 0.2.2
   images:
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/fish-speech:v1.5.0
+  - docker.io/t9kpublic/fish-speech:v1.5.0
   chart: oci://docker.io/t9kpublic/fish-speech:0.2.2
