--- a/user-console/gpt-researcher/app-artifacts.yaml
+++ b/user-console/gpt-researcher/app-artifacts.yaml
@@ -1,5 +1,5 @@
 versions:
 - version: 0.2.1
   images:
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/gpt-researcher:v3.1.5
+  - docker.io/t9kpublic/gpt-researcher:v3.1.5
   chart: oci://docker.io/t9kpublic/gpt-researcher:0.2.1
