--- a/user-console/jupyterlab/app-artifacts.yaml
+++ b/user-console/jupyterlab/app-artifacts.yaml
@@ -1,5 +1,5 @@
 versions:
 - version: 0.2.4
   images:
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/jupyterlab-torch-2.5.0:20241031
+  - docker.io/t9kpublic/jupyterlab-torch-2.5.0:20241031
   chart: oci://docker.io/t9kpublic/jupyterlab:0.2.4
