--- a/user-console/milvus/app-artifacts.yaml
+++ b/user-console/milvus/app-artifacts.yaml
@@ -1,8 +1,8 @@
 versions:
 - version: 4.2.38
   images:
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/milvus:v2.5.4
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/minio:RELEASE.2023-03-20T20-16-18Z
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/etcd:3.5.16-r1
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/pulsar:3.0.7
+  - docker.io/t9kpublic/milvus:v2.5.4
+  - docker.io/t9kpublic/minio:RELEASE.2023-03-20T20-16-18Z
+  - docker.io/t9kpublic/etcd:3.5.16-r1
+  - docker.io/t9kpublic/pulsar:3.0.7
   chart: oci://docker.io/t9kpublic/milvus:4.2.38
