--- a/user-console/mongodb/app-artifacts.yaml
+++ b/user-console/mongodb/app-artifacts.yaml
@@ -1,9 +1,9 @@
 versions:
 - version: 15.6.1
   images:
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/mongodb:7.0.11-debian-12-r0
+  - docker.io/t9kpublic/mongodb:7.0.11-debian-12-r0
   chart: oci://docker.io/t9kpublic/mongodb:15.6.1
 - version: 14.13.0
   images:
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/mongodb:7.0.6-debian-12-r0
+  - docker.io/t9kpublic/mongodb:7.0.6-debian-12-r0
   chart: oci://docker.io/t9kpublic/mongodb:14.13.0
