--- a/user-console/mysql/app-artifacts.yaml
+++ b/user-console/mysql/app-artifacts.yaml
@@ -1,9 +1,9 @@
 versions:
 - version: 11.1.20
   images:
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/mysql:8.4.3-debian-12-r0
+  - docker.io/t9kpublic/mysql:8.4.3-debian-12-r0
   chart: oci://docker.io/t9kpublic/mysql:11.1.20
 - version: 9.23.0
   images:
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/mysql:8.0.36-debian-12-r8
+  - docker.io/t9kpublic/mysql:8.0.36-debian-12-r8
   chart: oci://docker.io/t9kpublic/mysql:9.23.0
