--- a/user-console/one-api/app-artifacts.yaml
+++ b/user-console/one-api/app-artifacts.yaml
@@ -1,5 +1,5 @@
 versions:
 - version: 0.1.1
   images:
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/one-api:v0.6.10
+  - docker.io/t9kpublic/one-api:v0.6.10
   chart: oci://docker.io/t9kpublic/one-api:0.1.1
