--- a/user-console/open-webui/app-artifacts.yaml
+++ b/user-console/open-webui/app-artifacts.yaml
@@ -1,6 +1,6 @@
 versions:
 - version: 5.20.1
   images:
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/open-webui:v0.5.18
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/pipelines:main
+  - docker.io/t9kpublic/open-webui:v0.5.18
+  - docker.io/t9kpublic/pipelines:main
   chart: oci://docker.io/t9kpublic/open-webui:5.20.1
