--- a/user-console/stable-diffusion-webui-aki/app-artifacts.yaml
+++ b/user-console/stable-diffusion-webui-aki/app-artifacts.yaml
@@ -1,5 +1,5 @@
 versions:
 - version: 0.2.0
   images:
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/stable-diffusion-webui:20240514
+  - docker.io/t9kpublic/stable-diffusion-webui:20240514
   chart: oci://docker.io/t9kpublic/stable-diffusion-webui-aki:0.2.0
