--- a/user-console/workflow/app-artifacts.yaml
+++ b/user-console/workflow/app-artifacts.yaml
@@ -1,6 +1,6 @@
 versions:
 - version: 0.1.2
   images:
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/pep-proxy:1.0.14
-  - $(T9K_APP_IMAGE_REGISTRY)/$(T9K_APP_IMAGE_NAMESPACE)/workflow-app:250423
+  - docker.io/t9kpublic/pep-proxy:1.0.14
+  - docker.io/t9kpublic/workflow-app:250423
   chart: oci://docker.io/t9kpublic/workflow:0.1.2
