--- a/register-list/experimental-appstore-config.yaml
+++ b/register-list/experimental-appstore-config.yaml
@@ -47,3 +47,10 @@ apps:
 - name: stable-diffusion-webui-aki
   versions:
   - 0.2.0
+
+image:
+  registry: docker.io
+  repository: t9kpublic
+chart:
+  registry: docker.io
+  repository: t9kpublic
