--- a/.github/workflows/release-jupyterlab.yml
+++ b/.github/workflows/release-jupyterlab.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-      - "user-console/notebook/jupyterlab/chart/Chart.yaml"
+      - "user-console/jupyterlab/chart/Chart.yaml"
 
 jobs:
   release:
@@ -35,7 +35,7 @@ jobs:
       - name: Package and push chart
         run: |
           cd $GITHUB_WORKSPACE
-          cd user-console/notebook/jupyterlab
+          cd user-console/jupyterlab
           helm dependency update ./chart
           helm package ./chart
           helm push *.tgz oci://docker.io/t9kpublic
